apps/monitoring/manifests/pyrra/apiDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.5.0
  name: pyrra-api
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: pyrra
      app.kubernetes.io/part-of: kube-prometheus
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        parca.dev/scrape: "true"
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: pyrra
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 0.5.0
    spec:
      containers:
      - args:
        - api
        - --api-url=http://pyrra-kubernetes.monitoring.svc.cluster.local:9444
        - --prometheus-url=http://prometheus-k8s.monitoring.svc.cluster.local:9090
        - --prometheus-external-url=https://prometheus.ankhmorpork.thaum.xyz
        image: ghcr.io/pyrra-dev/pyrra:v0.5.0
        name: pyrra
        ports:
        - containerPort: 9099
        resources:
          requests:
            cpu: 100m
            memory: 30Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
