apps/monitoring/manifests/pyrra/api.yaml
metadata:
  name: pyrra-api
  namespace: monitoring
  labels:
    app.kubernetes.io/name: pyrra-api
spec:
  ports:
  - name: http
    port: 9099
  selector:
    app.kubernetes.io/name: pyrra-api
kind: Service
apiVersion: v1
---
metadata:
  name: pyrra-api
  namespace: monitoring
  labels:
    app.kubernetes.io/name: pyrra-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pyrra-api
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pyrra-api
    spec:
      containers:
      - args:
        - api
        - --prometheus-url=http://prometheus-k8s.monitoring.svc.cluster.local:9090
        - --api-url=http://pyrra-kubernetes.monitoring.svc.cluster.local:9444
        image: ghcr.io/pyrra-dev/pyrra:v0.1.0
        name: pyrra-api
        ports:
        - name: http
          containerPort: 9099
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
      nodeSelector:
        kubernetes.io/arch: "amd64"
        kubernetes.io/os: linux
kind: Deployment
apiVersion: apps/v1
