apps/monitoring/manifests/pyrra/kubernetes.yaml
metadata:
  name: pyrra-kubernetes
  namespace: monitoring
  labels:
    app.kubernetes.io/name: pyrra-kubernetes
spec:
  ports:
  - name: internal
    port: 9443
  - name: api
    port: 9444
  selector:
    app.kubernetes.io/name: pyrra-kubernetes
kind: Service
apiVersion: v1
---
metadata:
  name: pyrra-kubernetes
  namespace: monitoring
  labels:
    app.kubernetes.io/name: pyrra-kubernetes
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pyrra-kubernetes
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pyrra-kubernetes
    spec:
      serviceAccountName: pyrra-kubernetes
      containers:
      - args:
        - kubernetes
        image: ghcr.io/pyrra-dev/pyrra:v0.1.0
        name: pyrra-kubernetes
        resources:
          limits:
            cpu: 100m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
      nodeSelector:
        kubernetes.io/arch: "amd64"
        kubernetes.io/os: linux
kind: Deployment
apiVersion: apps/v1
