apps/monitoring/manifests/pyrra/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-signin: https://auth.ankhmorpork.thaum.xyz/oauth2/start?rd=$scheme://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.ankhmorpork.thaum.xyz/oauth2/auth
    probe-uri: /-/healthy
    reloader.homer/group: Administration
    reloader.homer/logo: https://avatars.githubusercontent.com/u/87393422?s=200&v=4
    reloader.homer/name: pyrra
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.6.3
    reloader.homer/enabled: "true"
  name: pyrra-api-nginx
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: pyrra.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: pyrra-api
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - pyrra.ankhmorpork.thaum.xyz
    secretName: pyrra-api-tls
