apps/monitoring/manifests/pyrra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    probe-uri: /-/healthy
    reloader.homer/group: Administration
    reloader.homer/logo: https://avatars.githubusercontent.com/u/87393422?s=200&v=4
    reloader.homer/name: pyrra
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: pyrra
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.6.3
    reloader.homer/enabled: "true"
  name: pyrra-api
  namespace: monitoring
spec:
  ingressClassName: public
  rules:
    - host: pyrra.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: pyrra-api
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pyrra.ankhmorpork.thaum.xyz
      secretName: pyrra-api-tls
